tests/analyzer/errors/missing_field_struct_literal.rv
struct Person {
    age: int,
    name: str,
}

fn main() {
    var tom = Person.{}
}

